--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,59 +1,74 @@
-#Vscode gitignore
+# VS Code
 .vscode/
 
-# Miscellaneous
+# IDEs
+.idea/
+*.iml
+*.ipr
+*.iws
+.atom/
+.swiftpm/
+
+# System & Miscellaneous
 *.class
 *.log
 *.pyc
 *.swp
+*.swo
+*.swn
 .DS_Store
-.atom/
+.history
+.svn/
 .build/
 .buildlog/
 .history
 .svn/
 .swiftpm/
 migrate_working_dir/
+*.bak
+*.tmp
+*.sqlite3
+*.db
+.env
 
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter / Dart / Pub
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
-/build/
+build/
+**/doc/api/
+**/ios/Flutter/.last_build_id
 
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
+# Android
+android/.gradle/
+android/app/build/
+android/build/
+android/local.properties
 /android/app/debug
 /android/app/profile
 /android/app/release
 
-#Temp files and env
-*.bak
-*.tmp
-*.swp
-*.swo
-*.swn
-*.log
-*.sqlite3
-*.db
-.env
+# iOS/macOS
+ios/Flutter/
+ios/Pods/
+ios/.symlinks/
+ios/.generated/
+ios/.dart_tool/
+ios/.build/
+ios/Flutter/Flutter.framework
+ios/Flutter/Generated.xcconfig
+ios/.idea/
+macos/Flutter/
+macos/build/
+
+# Web/Linux/Windows
+web/.dart_tool/
+linux/build/
+windows/build/
+
+# Flutter Symbolication & Obfuscation
+app.*.symbols
+app.*.map.json
